embedded web server improvements: - fix a bug where big data models were
2009-01-06  Vivien Malerba <malerba@gnome-db.org>

        * tools/: embedded web server improvements:
         - fix a bug where big data models were truncated
         - UI corrections
         - multiple simultaneous consoles now works
        * libgda/sqlite/virtual/gda-vconnection-hub.c: only bind the tables
        which require a complete name (<schema>.<name>)

svn path=/trunk/; revision=3278

--- a/tools/irb.css
+++ b/tools/irb.css
@@ -8,7 +8,7 @@ input.keyboard-selector-input {
 
 /* irb terminal */
 #terminal {
-    background-color: #f2f2f0;
+    /*background-color: #f2f2f0;*/
     width: 100%;
     height: 78%;
     overflow: auto; 
